// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert datafiller data from API 1`] = `
Array [
  Object {
    "refs": Array [
      Object {
        "relevance": 5,
        "title": "/some-unknown-source/test",
        "url": "/some-unknown-source/test",
      },
      Object {
        "relevance": 5,
        "title": "Fiche 2",
        "url": "/fiche-service-public/fiche-2",
      },
      Object {
        "relevance": 5,
        "title": "HTML page title",
        "url": "https://www.telerc.travail.gouv.fr/RuptureConventionnellePortailPublic/jsp/site/Portal.jsp?page_id=14",
      },
      Object {
        "relevance": 5,
        "title": "Article L1221-3",
        "url": "/code-du-travail/l1221-3",
      },
      Object {
        "relevance": 4,
        "title": "Fiche 3",
        "url": "/fiche-service-public/fiche-3",
      },
      Object {
        "relevance": 2,
        "title": "Conclusion du contrat de travail à durée déterminée (CDD)",
        "url": "/fiche-service-public/conclusion-du-contrat-de-travail-a-duree-determinee-cdd",
      },
    ],
    "theme": "theme1",
    "title": "title1",
    "variants": Array [
      "title1",
      "known-query1",
      "known-query2",
    ],
  },
  Object {
    "refs": Array [
      Object {
        "relevance": 5,
        "title": "Article L3221-3",
        "url": "/code-du-travail/l3221-3",
      },
      Object {
        "relevance": 3,
        "title": "Le salaire : quelles sont les modalités de paiement ?",
        "url": "/fiche-ministere-travail/le-salaire-quelles-sont-les-modalites-de-paiement",
      },
      Object {
        "relevance": 1,
        "title": "Thématique",
        "url": "/themes/theme1",
      },
    ],
    "theme": "theme2",
    "title": "title2",
    "variants": Array [
      "title2",
      "known-query3",
      "known-query4",
    ],
  },
]
`;

exports[`refs should be sorted by relevance and source type 1`] = `
Array [
  Object {
    "relevance": 5,
    "title": "/some-unknown-source/test",
    "url": "/some-unknown-source/test",
  },
  Object {
    "relevance": 5,
    "title": "Fiche 2",
    "url": "/fiche-service-public/fiche-2",
  },
  Object {
    "relevance": 5,
    "title": "HTML page title",
    "url": "https://www.telerc.travail.gouv.fr/RuptureConventionnellePortailPublic/jsp/site/Portal.jsp?page_id=14",
  },
  Object {
    "relevance": 5,
    "title": "Article L1221-3",
    "url": "/code-du-travail/l1221-3",
  },
  Object {
    "relevance": 4,
    "title": "Fiche 3",
    "url": "/fiche-service-public/fiche-3",
  },
  Object {
    "relevance": 2,
    "title": "Conclusion du contrat de travail à durée déterminée (CDD)",
    "url": "/fiche-service-public/conclusion-du-contrat-de-travail-a-duree-determinee-cdd",
  },
]
`;
